docs/sources/k6/v1.7.x/shared/browser/web-vital-core-metrics.md
---
title: browser/webvital-core-metrics
---

<!-- vale off -->

| Metric name           | Description                                                                                                                                                                                                                            |
| --------------------- | -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| browser_web_vital_cls | Measures the visual stability on a webpage by quantifying the amount of unexpected layout shift of visible page content. Refer to [Cumulative Layout Shift](https://web.dev/cls/) for more information.                                |
| browser_web_vital_fid | _This is deprecated in favor of INP_. Refer to the [official web.dev blog post](https://web.dev/blog/fid) for more details. Measures the responsiveness of a web page by quantifying the delay between a user’s first interaction, such as clicking a button, and the browser’s response. Refer to [First Input Delay](https://web.dev/fid/) for more information. |
| browser_web_vital_inp  | A metric that measures a page's responsiveness. Refer to [Interaction to Next Paint](https://web.dev/inp/) for more information.                                                                |
| browser_web_vital_lcp | Measures the time it takes for the largest content element on a page to become visible. Refer to [Largest Contentful Paint](https://web.dev/lcp/) for more information.                                                                |

<!-- vale on -->
